package podcast.model.entities.enums;

public enum Category {
    TECNOLOGIA,
    NEGOCIOS,
    ENTRETENIMIENTO,
    DEPORTES,
    EDUCACION,
    SALUD,
    ARTE,
    OCIO,
    ECONOMIA,
    CIENCIA,
    POLITICA,
    SOCIEDAD,
    CULTURA,
    HISTORIA,
    VIAJES,
    FICCION,
    COMEDIA,
    MUSICA,
    RELIGION,
    FILOSOFIA
}